--- a/Compreensão do projeto/Conceitos_Envolvidos.ipynb
+++ b/Compreensão do projeto/Conceitos_Envolvidos.ipynb
@@ -18,8 +18,7 @@
       "version": "3.8"
     },
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     }
   },
   "nbformat_minor": 5,
@@ -882,14 +881,14 @@
       "execution_count": null
     },
     {
-      "id": "81a60ef9-393a-4422-a88f-3c3c882491bc",
       "cell_type": "markdown",
       "source": [
-        "![image.png](attachment:ce3c551f-ec13-4e45-b888-1abceba80213.png)"
+        "### Multiplicação entre sinais\n"
       ],
       "metadata": {
-        "id": "81a60ef9-393a-4422-a88f-3c3c882491bc"
-      }
+        "id": "YjoFOaySnUHv"
+      },
+      "id": "YjoFOaySnUHv"
     },
     {
       "id": "33ac523c-001c-4e18-8177-f6a27553d29c",
@@ -1387,12 +1386,12 @@
       ],
       "metadata": {
         "trusted": true,
-        "id": "53d8459f-f956-441d-9139-251a871089c2",
-        "outputId": "d249b77e-0939-4571-ac08-7c9c42696888",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "id": "53d8459f-f956-441d-9139-251a871089c2",
+        "outputId": "d249b77e-0939-4571-ac08-7c9c42696888"
       },
       "outputs": [
         {
