--- a/APP/1v_GerOndApp.ipynb
+++ b/APP/1v_GerOndApp.ipynb
@@ -16,6 +16,9 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat_minor": 5,
@@ -24,36 +27,75 @@
     {
       "id": "d1b80529-48eb-4327-9494-1bb674c1239d",
       "cell_type": "code",
-      "source": "'''\nA função micropip é uma ferramenta usada em ambientes Python específicos, como o Pyodide ou MicroPython, \npara instalar pacotes Python diretamente no navegador ou em dispositivos com recursos limitados. \nEla é uma versão leve e adaptada do pip, o gerenciador de pacotes tradicional do Python.\n'''\n\n\nimport micropip\nawait micropip.install(\"numpy\")\nawait micropip.install(\"matplotlib\")\nawait micropip.install(\"scipy\")\nawait micropip.install(\"ipympl\")\nawait micropip.install('ipywidgets') \n\n%matplotlib widget \n\nimport functions as fc",
+      "source": [
+        "!git clone https://github.com/lucas-noblat/GerOndApp.git\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "sys.path.append('/content/GerOndApp/APP')\n",
+        "\n",
+        "\n",
+        "#import functions as fc\n"
+      ],
       "metadata": {
-        "trusted": true
+        "trusted": true,
+        "id": "d1b80529-48eb-4327-9494-1bb674c1239d",
+        "outputId": "e5ddc88a-ae29-4cbf-b12b-a7d5b170ebe4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
-          "text": "Matplotlib is building the font cache; this may take a moment.\n"
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'GerOndApp' already exists and is not an empty directory.\n"
+          ]
         }
       ],
-      "execution_count": 1
+      "execution_count": 12
     },
     {
       "id": "619fc4de-dc47-4fdb-b4f6-a2c0fad0ce36",
       "cell_type": "code",
-      "source": "#sig = fc.gerar_sinal('a', 1, 3, 1, 0)",
+      "source": [
+        "#sig = fc.gerar_sinal('a', 1, 3, 1, 0)"
+      ],
       "metadata": {
-        "trusted": true
+        "trusted": true,
+        "id": "619fc4de-dc47-4fdb-b4f6-a2c0fad0ce36"
       },
       "outputs": [],
-      "execution_count": 2
+      "execution_count": null
     },
     {
       "id": "2181e210-e8f8-46c3-8076-c2b603d82caf",
       "cell_type": "code",
-      "source": "# Define o vetor tempo que será usado\nvetor_tempo = fc.np.linspace(0,1,1000)\n\nseno = fc.onda_senoidal(amplitude = 2, frequencia = 1, t = vetor_tempo, fase = 0)\nquad = fc.onda_quadrada(amplitude = 2, frequencia = 2, t = vetor_tempo, duty = 0.5)\nruidoBranco = fc.ruido_branco(1, 1, 1000)\n\nlista_operacoes = ['+', '+']\nseries_ativas = [seno, quad, ruidoBranco]\nres = fc.aplicar_operacoes(series_ativas, lista_operacoes)\nfc.plotar_2x2(seno, quad, ruidoBranco, res,vetor_tempo,\n             labels = ['Senoidal','Quadrada','Ruido Branco','Resultante'])",
+      "source": [
+        "# Define o vetor tempo que será usado\n",
+        "vetor_tempo = fc.np.linspace(0,1,1000)\n",
+        "\n",
+        "seno = fc.onda_senoidal(amplitude = 2, frequencia = 1, t = vetor_tempo, fase = 0)\n",
+        "quad = fc.onda_quadrada(amplitude = 2, frequencia = 2, t = vetor_tempo, duty = 0.5)\n",
+        "ruidoBranco = fc.ruido_branco(1, 1, 1000)\n",
+        "\n",
+        "lista_operacoes = ['+', '+']\n",
+        "series_ativas = [seno, quad, ruidoBranco]\n",
+        "res = fc.aplicar_operacoes(series_ativas, lista_operacoes)\n",
+        "fc.plotar_2x2(seno, quad, ruidoBranco, res,vetor_tempo,\n",
+        "             labels = ['Senoidal','Quadrada','Ruido Branco','Resultante'])"
+      ],
       "metadata": {
         "trusted": true,
-        "scrolled": true
+        "scrolled": true,
+        "id": "2181e210-e8f8-46c3-8076-c2b603d82caf",
+        "outputId": "e6b0fd05-bd3d-4767-a503-fb38abbaf064",
+        "colab": {
+          "referenced_widgets": [
+            "45407ef857f8451180a330ac608a7627"
+          ]
+        }
       },
       "outputs": [
         {
@@ -71,14 +113,15 @@
           "metadata": {}
         }
       ],
-      "execution_count": 3
+      "execution_count": null
     },
     {
       "id": "47fe7e38-dbfe-415b-b56b-b5b354777315",
       "cell_type": "code",
-      "source": "",
+      "source": [],
       "metadata": {
-        "trusted": true
+        "trusted": true,
+        "id": "47fe7e38-dbfe-415b-b56b-b5b354777315"
       },
       "outputs": [],
       "execution_count": null
@@ -86,9 +129,18 @@
     {
       "id": "fca06d34-c54a-4e2b-a82d-897184ff53ee",
       "cell_type": "code",
-      "source": "series_ativas = [seno, quad, ruidoBranco]\noperacoes = ['+','+']\n\nresultante = fc.aplicar_operacoes(series_ativas, operacoes)\nfc.plotar(resultante, t, 'Série Resultante')\nfc.plotar(seno, t, \"Seno\")",
+      "source": [
+        "series_ativas = [seno, quad, ruidoBranco]\n",
+        "operacoes = ['+','+']\n",
+        "\n",
+        "resultante = fc.aplicar_operacoes(series_ativas, operacoes)\n",
+        "fc.plotar(resultante, t, 'Série Resultante')\n",
+        "fc.plotar(seno, t, \"Seno\")"
+      ],
       "metadata": {
-        "trusted": true
+        "trusted": true,
+        "id": "fca06d34-c54a-4e2b-a82d-897184ff53ee",
+        "outputId": "1af8ae6b-36a4-4459-855b-c2410d453696"
       },
       "outputs": [
         {
@@ -103,7 +155,7 @@
           "output_type": "error"
         }
       ],
-      "execution_count": 4
+      "execution_count": null
     }
   ]
 }
