--- a/Logica/1v_GerOndApp.ipynb
+++ b/Logica/1v_GerOndApp.ipynb
@@ -440,7 +440,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0rc1"
+      "version": "3.13.0"
     }
   },
   "nbformat": 4,
